--- a/Materials.html
+++ b/Materials.html
@@ -22,20 +22,14 @@
     <div class="text-column">
 
              <p class="intro-text">
-      Data & Sensors
+      Materials & Sensors
       </p>
 
       <!-- Body text -->
       <div class="body-text">
         <p>This project engages with scientific reports on the geology and soil of Gaza, archival maps created by the British Survey of Palestine, samples of plants sprayed by the IDF’s herbicides, archival videos, Geomolg—the national geographic information system of Palestine, reports by Forensic Architecture, and Landsat satellite data. Conceptually, I draw upon the works of scholars who understand land in Palestine volumetrically and densely, including Nadia Abu El Haj and Eyal Weizman, along with photographic/satellite image theory, and methods theorized through groups in the <a href="https://investigative-commons.org/">Investigative Commons</a>, including INTERPRT and Forensic Architecture. 
 </p>
-<p>I have worked with a lot of satellite data up till now, using Landsat reflective bands to create true color images, calculate NDVI, and experimented with NDESI (Normalized Difference Enhanced Sand Index) as I trace the histories of sand in Gaza (see maps in atlas in proof of concept section). This type of analysis and data allow me to trace patterns of land cover in Gaza. 
- 
-I have also used maps created by B’tselem, Forensic Architecture, the British Mandate Palestine Survey as data, georeferencing them and tracing elements such as topographical lines, agricultural boundaries, sand dune boundaries, annotated heights of the dunes, Israeli settlement boundaries, and military raid routes. This collection of data has allowed me to trace these processes over time, identifying patterns and systemic relationships as I narrate in the Sand Atlas. 
- 
-I’ve also been drawing on scientific geological and soil sample papers to gather data of levels of toxins (phosphorous, radon) and the geologic history of soil in Gaza. These papers allow me to situate Gaza as a site on earth, imbedded in prehistoric time scales, and to identify concentrations of toxicity on a micro level. 
- 
-Moving forward, I hope to use more advanced remote sensing techniques to track soil moisture/ content. 
+<p>I am viewing the plants planted in the agricultural fields along the Gaza border as sensors; their biological existences, in their many iterations, sense the evolving status of the border, from its nonexistence to the plow that drove through the earth to mark the border in 1951, to the increasing depth of the border wall itself (in some places deep into the ground to block tunnels, to the increasing width of the border through the implementation of no go and risk zones by Israel, to the limiting of plant heights to maintain military lines of sight into the strip. Tracing what these sensors are registering involves historical research and computational visualization processes, including georeferencing to see where olive and citrus groves used to be, to NDVI analysis, to creative forms of visualizing these narratives. 
 </p>
       </div>
 
