--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </p>
 
     <p>
-      As I have mapped through this Atlas and narrated through this video piece, the British Mandate was concerned with the encroachment of sand in Gaza in the 1920s and 30s, imposing a Sand Drift Ordinance to “arrest” the movement of the dunes. This entailed a massive afforestation project, forcing those living in Gaza City and Beit Lahiya to plant trees without pay, moreover making sandy land specifically vulnerable to expropriation by the state. Searching in vain for Biblical ruins along the coast, the British also concluded that these ruins had been covered by sand. Moving forward, I want to explore the relationship of sand to forms of visuality in archeological contexts, which have long been co-opted in Israeli national narratives and systemically targeted through bombing in Gaza. Simultaneously, in more recent years, softer, sandy soil has helped enable the building of tunnels and has obstructed their detection by the IDF’s radar systems. Along these lines, I am interested in exploring the subterranean as a site of resistance, as well as of obfuscated violence.
+      As I have mapped through <a href="narrative-atlas.html">this Atlas</a> and narrated through this video piece, the British Mandate was concerned with the encroachment of sand in Gaza in the 1920s and 30s, imposing a Sand Drift Ordinance to “arrest” the movement of the dunes. This entailed a massive afforestation project, forcing those living in Gaza City and Beit Lahiya to plant trees without pay, moreover making sandy land specifically vulnerable to expropriation by the state. Searching in vain for Biblical ruins along the coast, the British also concluded that these ruins had been covered by sand. Moving forward, I want to explore the relationship of sand to forms of visuality in archeological contexts, which have long been co-opted in Israeli national narratives and systemically targeted through bombing in Gaza. Simultaneously, in more recent years, softer, sandy soil has helped enable the building of tunnels and has obstructed their detection by the IDF’s radar systems. Along these lines, I am interested in exploring the subterranean as a site of resistance, as well as of obfuscated violence.
     </p>
 
     <p>
@@ -38,7 +38,7 @@
     </p>
 
     <p>
-    In the past two years, the IDF has damaged <a href="https://e360.yale.edu/digest/gaza-october-2025-damage-assessment">95%</a> of agricultural land, reforming it into military sites and razed earth berms. According to a <a href="https://frames.forensic-architecture.org/gaza/ceasefire/expanding-the-architecture-of-occupation">report</a> by Forensic Architecture, these berms not only help form the military architecture of the checkpoints now slicing through Gaza, but host cameras connected to facial recognition software developed by the Israeli company Cortex and Google Photos. As the earth below constitutes a scrambled archive, holding the traces of vegetation and toxins from munitions, the cameras and algorithmic networks positioned above are collecting data for prediction-based military models. These cameras are integrated into the violently disfigured topography of Gaza, creating new borders and operational points of horizontal military sight. 
+    In the past two years, the IDF has damaged <a href="https://e360.yale.edu/digest/gaza-october-2025-damage-assessment">95%</a> of agricultural land, reforming it into military sites and razed earth berms. According to a <a href="https://frames.forensic-architecture.org/gaza/ceasefire/expanding-the-architecture-of-occupation">report</a> by Forensic Architecture, these berms not only help form the military architecture of the checkpoints now slicing through Gaza, but host cameras connected to facial recognition software developed by the Israeli company Cortex and Google Photos. As the earth below constitutes a scrambled archive, holding the traces of vegetation and toxins from munitions, the cameras and algorithmic networks positioned above are collecting <a href="data.html">data</a> for prediction-based military models. These cameras are integrated into the violently disfigured topography of Gaza, creating new borders and operational points of horizontal military sight. 
 
     </p>
 
@@ -47,7 +47,7 @@
 
     </p>
     <p> 
-Over the next few months I plan to map and unentangle the processes I have begun to describe: the deep interconnectedness between land (re)formations and colonial military vision and violence. This will include cartographic and satellite image analyses, producing informed, speculative cross-sections of land and soil toxicity, visualizations of the plants’ heights and chemical conditions, and writing that explicates the IDF’s co-optation of geology and the role of sight in producing colonial futures. In preparation for this, I’ve been tagging and assembling my sources into a <a href="https://mika-yassur.github.io/temporary-archive/">visual web database</a>, allowing me to track the themes that appear across these references. I am also arranging conversations with a series of practitioners from different fields to flesh out the broad range of scales and disciplines I am working in, including an environmental scientist from UCSC to speak on the specificities of sand, soil, and geological influences, Nadia Abu El-Haj from Columbia’s Center for Palestine Studies for her expertise on the role of archeology in the Israeli national narrative, Shourideh Molavi, Professor of Anthropology and lead Palestine expert at Forensic Architecture for her work on herbicide spraying and border studies, and Palestinian architect and artist <a href="https://www.dimasrouji.com/">Dima Srouji</a>, whose collaged video work and research into glass as artefact is deeply inspiring to me. I plan to develop this research into an exhibit by the end of next semester, drawing on the <a href="presentation.html">representational and presentational methods</a> I’ve experimented with over the past few months, including collage, projection, and layering. 
+Over the next few months I plan to <a href="computational-methods.html">map and unentangle</a> the processes I have begun to describe: the deep interconnectedness between land (re)formations and colonial military vision and violence. This will include cartographic and satellite image analyses, producing informed, speculative cross-sections of land and soil toxicity, visualizations of the plants’ heights and chemical conditions, and writing that explicates the IDF’s co-optation of geology and the role of sight in producing colonial futures. In preparation for this, I’ve been tagging and assembling my <a href="Bibliography.html">sources</a> into a <a href="https://mika-yassur.github.io/temporary-archive/">visual web database</a>, allowing me to track the themes that appear across these references. I am also arranging conversations with a series of practitioners from different fields to flesh out the broad range of scales and disciplines I am working in, including an environmental scientist from UCSC to speak on the specificities of sand, soil, and geological influences, Nadia Abu El-Haj from Columbia’s Center for Palestine Studies for her expertise on the role of archeology in the Israeli national narrative, Shourideh Molavi, Professor of Anthropology and lead Palestine expert at Forensic Architecture for her work on herbicide spraying and border studies, and Palestinian architect and artist <a href="https://www.dimasrouji.com/">Dima Srouji</a>, whose collaged video work and research into glass as artefact is deeply inspiring to me. I plan to develop this research into an <a href="audience.html">exhibit</a> by the end of next semester, drawing on the <a href="presentation.html">representational and presentational methods</a> I’ve experimented with over the past few months, including collage, projection, and layering. 
 
     </p>
 
@@ -58,6 +58,23 @@ Over the next few months I plan to map and unentangle the processes I have begun
     <img src="images/exhibtion.png" width="90%"/>
 
     </div>
+
+<div class="toc">
+  <p class="toc-title">Table of Contents</p>
+
+  <ul class="toc-list">
+    <li>a./b. Provocation and Project Description (current page)</li>
+    <li>c. <a href="computational-methods.html">Computational Methods</a></li>
+    <li>d. <a href="presentation.html">Design Methods</a></li>
+    <li>e. <a href="precedents.html">Precedents</a></li>
+    <li>f. <a href="proof-of-concept.html">Proof of Concept</a></li>
+    <li>g. <a href="audience.html">Audience</a></li>
+    <li>h./i. <a href="data.html">Data and Data Sources</a></li>
+    <li>i. <a href="materials.html">Materials and Sensors</a></li>
+    <li>j. <a href="Bibliography.html">Research / Bibliography</a></li>
+  </ul>
+</div>
+    
 
       <!-- Scroll space -->
       <div class="spacer"></div>
@@ -79,7 +96,7 @@ Over the next few months I plan to map and unentangle the processes I have begun
     <img src="images/arch_sites.png" class="stack-image" />
     <img src="images/settlements.png" class="stack-image" />
     <img src="images/border.png" class="stack-image" />
-    <img src="images/earth berms.png" class="stack-image" />
+   <!-- <img src="images/earth berms.png" class="stack-image" /> -->
 
       </div>
 
