--- a/proof-of-concept.html
+++ b/proof-of-concept.html
@@ -1,4 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Proof of Concept</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <!-- HEADER / NAVIGATION -->
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+    </nav>
+  </header>
 
-<p>For the first review I presented off a <a href="https://miro.com/app/board/uXjVJ_ppBms=/?share_link_id=625409934428" target="_blank">Miro board</a>, and for the second review off of a <a href="https://docs.google.com/spreadsheets/d/1qeAWn2ajFOwUr0qWTJZkLGqc_kzgKDdkkwGUueV9Qc/edit?usp=sharing" target="_blank">Google Sheets</a> page I experimented with.</p>
-        <p>In the final presentation, I put different projects I'd been working on over the course of the semester together into a small exhibit / performance lecture, layering transparencies on the overhead projector as I talked.</p>
+   <!-- MAIN PAGE: TWO COLUMNS -->
+  <div class="page">
+
+    <!-- LEFT COLUMN: TEXT -->
+    <div class="text-column">
+
+      <p class="intro-text">
+        Proof of Concept
+      </p>
+
+      <p class="commentary">
+        <strong>Proof of concept</strong> (performance lecture, exhibit, experimenting with digital formats):
+      </p>
+
+      <ul class="commentary-list tight">
+        <li>
+          <a href="https://miro.com/app/board/uXjVJ_ppBms=/?share_link_id=625409934428" target="_blank">
+            Explore review
+          </a>
+        </li>
+        <li>
+          <a href="https://docs.google.com/spreadsheets/d/1qeAWn2ajFOwUr0qWTJZkLGqc_kzgKDdkkwGUueV9Qc/edit?usp=sharing" target="_blank">
+            Explain review
+          </a>
+        </li>
+        <li>
+          <a href="index.html">Propose review</a>
+        </li>
+      </ul>
+
+      <p class="commentary">
+        <strong>Methodological and design work:</strong>
+      </p>
+
+      <ul class="commentary-list tight">
+        <li><a href="narrative-atlas.html">Narrative Atlas</a> (pin up and book)</li>
+        <li><a href="https://drive.proton.me/urls/H055CYPZBG#fSH9JC7KCwXg">Short film</a></li>
+        <li><a href="https://mika-yassur.github.io/temporary-archive/">Source Website</a> (in progress)</li>
+        <li>Transparencies on overhead projector (modelled on home page)</li>
+      </ul>
+
+    </div>
+
+    <!-- RIGHT COLUMN: IMAGE -->
+    <div class="image-column">
+      <div class="image-stack">
+        <img src="images/exhibtion.png" style="width:100%;" alt="Exhibition image">
+      </div>
+    </div>
+
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
