--- a/presentation.html
+++ b/presentation.html
@@ -29,7 +29,18 @@
       <div class="body-text">
         <p>In thinking through sediment, I’m interested in design methods that engage with concepts of layering, folding, and unwrapping, including collage and design in Blender and QGIS, along with developing the atlas and video along these lines. Light has also emerged as a theme in my design work and presentation style; I plan to keep experimenting with projection and how light is emitted as I develop this project. My hope is that these design choices and practices will embody the analytic, investigative, narrative, and critical lenses I engage with in my work.  
 </p>
-        
+              <div class="body-text">
+        <p>
+          For the first review I presented off a
+          <a href="https://miro.com/app/board/uXjVJ_ppBms=/?share_link_id=625409934428" target="_blank">
+            Miro board
+          </a>,
+          and for the second review off of a
+          <a href="https://docs.google.com/spreadsheets/d/1qeAWn2ajFOwUr0qWTJZkLGqc_kzgKDdkkwGUueV9Qc/edit?usp=sharing" target="_blank">
+            Google Sheets
+          </a>
+          page I experimented with.
+        </p>
       </div>
 
     </div>
@@ -37,7 +48,7 @@
     <!-- RIGHT COLUMN: IMAGE -->
     <div class="image-column">
       <div class="image-stack">
-        <img src="images/IMG_5686.jpg" class="large-image" alt="IMG_5686">
+        <img src="images/exhibtion.png" class="large-image" >
         <!-- You can add more images here as needed -->
       </div>
     </div>
