--- a/audience.html
+++ b/audience.html
@@ -21,55 +21,68 @@
     <!-- LEFT COLUMN: TEXT -->
     <div class="text-column">
 
-             <p class="intro-text">
-     Audience
+      <p class="intro-text">
+        Audience
       </p>
 
       <!-- Body text -->
       <div class="body-text">
-<p class="commentary">
-  I plan to hold the first (and only planned) iteration of this exhibit in a to-be-determined
-  space in New York City. By choosing to present my work in an exhibit, it makes my work very
-  much for the immediate community—GSAPP and people I plan to invite. Hopefully I can also
-  translate a part of this project (the written component, images, and digital elements of
-  the exhibit) online so that they can be spread more widely.
-</p>
+        <p class="commentary">
+          I plan to hold the first (and only planned) iteration of this exhibit in a to-be-determined
+          space in New York City. By choosing to present my work in an exhibit, it makes my work very
+          much for the immediate community—GSAPP and people I plan to invite. Hopefully I can also
+          translate a part of this project (the written component, images, and digital elements of
+          the exhibit) online so that they can be spread more widely.
+        </p>
 
-<p class="commentary">
-  Creating this project for an even wider public could look like:
-</p>
+        <p class="commentary">
+          Creating this project for an even wider public could look like:
+        </p>
 
-<ul class="commentary-list">
-  <li>
-    A zine or digital publication like
-    <a href="https://archive.mosaicrooms.org/pdf-dignified-life-outliving-impossible-ecologies/"
-       target="_blank">
-      <em>this</em>
-    </a>
-  </li>
-  <li>
-    A
-    <a href="https://conquer-and-divide.btselem.org/map-en.html" target="_blank">
-      <em>digital narrative atlas</em>
-    </a>
-  </li>
-  <li>
-    An interactive
-    <a href="https://forensic-architecture.org/investigation/a-cartography-of-genocide"
-       target="_blank">
-      <em>map</em>
-    </a>
-  </li>
-</ul>
+        <ul class="commentary-list">
+          <li>
+            A zine or digital publication like
+            <a href="https://archive.mosaicrooms.org/pdf-dignified-life-outliving-impossible-ecologies/"
+               target="_blank">
+              this
+            </a>
+          </li>
+          <li>
+            A
+            <a href="https://conquer-and-divide.btselem.org/map-en.html" target="_blank">
+              digital narrative atlas
+            </a>
+          </li>
+          <li>
+            An interactive
+            <a href="https://forensic-architecture.org/investigation/a-cartography-of-genocide"
+               target="_blank">
+              map
+            </a>
+          </li>
+        </ul>
 
-<p class="commentary">
-  I also consider the web archive I am putting together to be a step in this direction. I need
-  to consider what text or explanatory material I will supplement this reference with to make
-  it usable for others.
-</p>
+        <p class="commentary">
+          I also consider the web archive I am putting together to be a step in this direction. I need
+          to consider what text or explanatory material I will supplement this reference with to make
+          it usable for others.
+        </p>
 
+      </div> <!-- end of body-text -->
 
-  </div>
+    </div> <!-- end of text-column -->
+
+    <!-- RIGHT COLUMN: IMAGE -->
+    <div class="image-column">
+      <div class="image-stack">
+        <img src="images/Screenshot 2025-12-16 at 11.13.10 AM.png" class="large-image" alt="Screenshot 1">
+        <img src="images/Screenshot 2025-12-16 at 11.18.15 AM.png" class="large-image" alt="Screenshot 2">
+        <img src="images/Screenshot 2025-12-16 at 11.20.09 AM.png" class="large-image" alt="Screenshot 3">
+        <!-- You can add more images here as needed -->
+      </div>
+    </div> <!-- end of image-column -->
+
+  </div> <!-- end of page -->
 
   <script src="script.js"></script>
 </body>
