--- a/precedents.html
+++ b/precedents.html
@@ -28,8 +28,16 @@
       <!-- Body text -->
       <div class="body-text">
         <p> 
-          My precedent studies include <i>Dignified Life: Outliving Impossible Ecologies</i>, “May Amnesia Never Kiss Us on the Mouth,” <i>Italian Limes</i>, and many of Dima Srouji’s works, including “Depth Unknown” and “She Still Wears Kohl and Smells Like Roses II.” 
+          My precedent studies include <a href="https://archive.mosaicrooms.org/pdf-dignified-life-outliving-impossible-ecologies/"><i>Dignified Life: Outliving Impossible Ecologies</i></a>, <a href="https://mayamnesia.com/">“May Amnesia Never Kiss Us on the Mouth,”</a> <a href="http://www.italianlimes.net/"><i>Italian Limes</i></a> and many of Dima Srouji’s <a href="https://www.dimasrouji.com/">works</a>, including “Depth Unknown” and “She Still Wears Kohl and Smells Like Roses II.” 
         </p>
+        <p>
+            <i>Dignified Life: Outliving Impossible Ecologies</i> has inspired the concept and content of my work: thinking through ecologies in Palestine of different scales and through different mediums (writing, sound, photographs, drawing, cartography). Aya O. Bseiso’s text in this edited collection inspired me to not shy away from inserting / writing myself into my cartography practice, while Carla Aoud’s work is a huge visual text and watercolor collage inspiration. 
+Basel Abbas and Ruanne Abou-Rahme’s "May Amnesia Never Kiss Us on the Mouth” project inspired the assemblage of my source archive, and is also a visual reference for my digital collage practice, inspiring me to layer video and images.
+<i>Italian Limes’</i> visually striking annotation method, emphasis on cartography as process and on the dimensionality of land has always been a major reference for me. 
+Finally, Dima Srouji’s work is a major cartographic, model making, video, and conceptual reference for me in both medium and content. My work is certainly critiquing the present (and past) conditions in Gaza, and many of these references give examples of how to hold that present reality in some way. 
+
+        </p>
+                <img src="images/Screenshot 2025-12-16 at 8.45.16 PM.png" class="large-image" >
       </div>
 
     </div> <!-- end of text-column -->
@@ -39,6 +47,7 @@
       <div class="image-stack">
         <img src="images/Screenshot 2025-12-16 at 11.13.10 AM.png" class="large-image" >
         <img src="images/Screenshot 2025-12-16 at 11.15.13 AM.png" class="large-image" >
+
         <!-- You can add more images here as needed -->
       </div>
     </div> <!-- end of image-column -->
