--- a/data.html
+++ b/data.html
@@ -29,11 +29,11 @@
       <div class="body-text">
 
 
-<p>I have worked primarily with satellite data this semester, using Landsat reflective bands to create true color images, calculate NDVI, and experimented with NDESI (Normalized Difference Enhanced Sand Index) as I trace the histories of sand in Gaza (see maps in atlas in proof of concept section). This type of analysis and data allow me to trace patterns of land cover in Gaza. 
+<p>I have worked primarily with satellite data this semester, using Landsat reflective bands to create true color images, calculate NDVI, and experimented with NDESI (Normalized Difference Enhanced Sand Index) as I trace the histories of sand in Gaza (see my <a href="narrative-atlas.html">narrative atlas</a>). This type of analysis and data allow me to trace patterns of land cover in Gaza. 
  
-I have also used maps created by B’tselem, Forensic Architecture, the British Mandate Palestine Survey as data, georeferencing them and tracing elements such as topographical lines, agricultural boundaries, sand dune boundaries, annotated heights of the dunes, Israeli settlement boundaries, and military raid routes. This collection of data has allowed me to trace these processes over time, identifying patterns and systemic relationships as I narrate in the <a href="narrative-atlas.html">Sand Atlas</a>. 
+I have also used maps created by B’tselem, Forensic Architecture, the British Mandate Palestine Survey as data, georeferencing them and tracing elements such as topographical lines, agricultural boundaries, sand dune boundaries, annotated heights of the dunes, Israeli settlement boundaries, and military raid routes. This collection of data has allowed me to trace these processes over time, identifying patterns and systemic relationships as I narrate in the <a href="narrative-atlas.html">sand atlas</a> and <a href="https://drive.proton.me/urls/H055CYPZBG#fSH9JC7KCwXg">video</a>. 
  
-I’ve also been drawing on scientific geological and soil sample papers to gather data of levels of toxins (phosphorous, radon) and the geologic history of soil in Gaza. These papers allow me to situate Gaza as a site on earth, imbedded in prehistoric time scales, and to identify concentrations of toxicity on a micro level. 
+I’ve also been drawing on scientific geological and soil sample papers to gather data of levels of toxins (phosphorous, radon) and the geologic history of soil in Gaza. These papers allow me to situate Gaza as a site on/in earth, imbedded in prehistoric time scales, and to identify concentrations of toxicity on a micro level. 
  
 Moving forward, I hope to use more advanced remote sensing techniques to track soil moisture/ content. 
 </p>
